[GM3Restyling] Update devtools select menu combobox styles
Bug: 368246828
Change-Id: I654daf7da478b7b536f9de9e4c8d2df2477b7d6c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973698
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/recorder/components/recordingView.css
+++ b/front_end/panels/recorder/components/recordingView.css
@@ -300,12 +300,9 @@
   align-items: center;
 }
 
-.editable-setting devtools-select-menu {
-  height: 32px;
-}
-
 .editable-setting .devtools-text-input {
   width: fit-content;
+  height: var(--sys-size-9);
 }
 
 .wrapping-label {
