--- a/front_end/panels/recorder/components/selectButton.css
+++ b/front_end/panels/recorder/components/selectButton.css
@@ -13,57 +13,13 @@
   position: relative; /* Needed for outline to appear on top of the next element */
 }
 
+.select-button devtools-select-menu {
+  position: relative;
+  top: var(--sys-size-1);
+  height: var(--sys-size-9);
+}
+
 .select-menu-item-content-with-icon {
   display: flex;
   align-items: center;
 }
-
-/* .select-menu-item-content-with-icon::before {
-  content: "";
-  position: relative;
-  left: 0;
-  top: 0;
-  background-color: var(--sys-color-on-surface);
-  display: inline-block;
-  mask-repeat: no-repeat;
-  mask-position: center;
-  width: 24px;
-  height: 24px;
-  margin-right: 4px;
-  mask-image: var(--item-mask-icon);
-} */
-
-/* devtools-select-menu {
-  height: var(--override-select-menu-height, 24px);
-  border-radius: 0 4px 4px 0;
-  box-sizing: border-box;
-
-  --override-select-menu-show-button-outline: var(--sys-color-state-focus-ring);
-  --override-select-menu-label-with-arrow-padding: 0;
-  --override-select-menu-border: none;
-  --override-select-menu-show-button-padding: 0 6px 0 0;
-} */
-
-/* devtools-select-menu.primary {
-  border: none;
-  border-left: 1px solid var(--override-icon-and-text-color);
-
-  --override-icon-and-text-color: var(--sys-color-cdt-base-container);
-  --override-select-menu-arrow-color: var(--override-icon-and-text-color);
-  --override-divider-color: var(--override-icon-and-text-color);
-  --override-select-menu-background-color: var(--sys-color-primary);
-  --override-select-menu-active-background-color:
-    var(
-      --override-select-menu-background-color
-    );
-} */
-
-/* devtools-select-menu.primary:hover {
-  --override-select-menu-background-color: color-mix(in sRGB, var(--sys-color-primary), var(--sys-color-state-hover-on-prominent) 10%);
-} */
-
-/* devtools-select-menu[disabled].primary,
-devtools-select-menu[disabled].primary:hover {
-  --override-icon-and-text-color: var(--sys-color-state-disabled);
-  --override-select-menu-background-color: var(--sys-color-cdt-base-container-elevation-1);
-} */
