Fix misaligned 'Raw' checkbox for Network headers
Screenshot: https://imgur.com/a/KTDIczT

Fixed: 375130405
Change-Id: Id171be0958f6d858036b80aa3b6a345b73d6ae4b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5979946
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/network/components/RequestHeadersView.css
+++ b/front_end/panels/network/components/RequestHeadersView.css
@@ -166,6 +166,13 @@ x-link .inline-icon { /* stylelint-disable-line selector-type-no-unknown */
   z-index: 1;
 }
 
+summary label {
+  display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
+  gap: var(--sys-size-3);
+}
+
 summary label input[type="checkbox"] {
   margin-top: 1px;
 }
