[GM3Restyling] Polish disabled toolbar item select combobox
This fixes the combobox being clickable in the disabled state
and adjust opacity for the same

Fixed: 376169512
Change-Id: Ie4e907d49055f8b7cd92a4f63a9f1e921a85e992
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5979754
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -331,10 +331,9 @@ select.toolbar-item {
   height: var(--sys-size-9);
   border-radius: var(--sys-shape-corner-extra-small);
 
-  &:disabled,
-  &:disabled:hover,
-  &:disabled:active,
-  &:disabled:hover:active {
+  &:disabled {
+    opacity: 100%;
+    pointer-events: none;
     background-color: var(--sys-color-state-disabled-container);
     color: var(--sys-color-state-disabled);
 
