[GM3Restyling] Update workspace settings page
Before: https://i.imgur.com/M7vIlO6.png
After: https://i.imgur.com/ywKVbZ4.png
Bug: 368238837
Change-Id: I793c6cfe0f62d8bcbe932ecdaf860fb39177ffbe
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973211
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/models/persistence/editFileSystemView.css
+++ b/front_end/models/persistence/editFileSystemView.css
@@ -4,20 +4,32 @@
  * found in the LICENSE file.
  */
 
-.file-system-header {
+.excluded-folder-header {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex: auto;
-  margin: 10px 0;
+  flex-direction: column;
+  height: var(--sys-size-16);
+  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+  padding: var(--sys-size-5) var(--sys-size-6);
+
+  & > .excluded-folder-url {
+    color: var(--sys-color-on-surface-subtle);
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
-.file-system-header-text {
-  flex: 1 0 auto;
+.exclude-subfolders-text, .file-system-list-empty {
+  padding: 0 var(--sys-size-6);
+  height: var(--sys-size-13);
+}
+
+.exclude-subfolders-text {
+  align-items: center;
+  display: flex;
 }
 
 .add-button {
-  margin-left: 10px;
+  padding: var(--sys-size-4) var(--sys-size-6);
   align-self: flex-start;
 }
 
@@ -26,17 +38,12 @@
 }
 
 .file-system-list-empty {
-  flex: auto;
-  height: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  text-align: center;
 }
 
 .file-system-list-item {
-  padding: 3px 5px;
-  height: 30px;
+  height: var(--sys-size-13);
   display: flex;
   align-items: center;
   flex: auto 1 1;
@@ -44,6 +51,18 @@
 
 .file-system-value {
   flex: 1 1 0;
+}
+
+.list {
+  border: none;
+}
+
+.list-item {
+  padding: 0 var(--sys-size-6);
+}
+
+.editor-buttons {
+  padding: var(--sys-size-4) var(--sys-size-6);
 }
 
 .list-item .file-system-value {
@@ -57,7 +76,7 @@
   flex: none;
   display: flex;
   flex-direction: row;
-  margin: 6px 5px;
+  margin: var(--sys-size-4) var(--sys-size-6);
   align-items: center;
 }
 
