--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -146,6 +146,7 @@ label {
 
 .settings-card-container-wrapper {
   padding-top: var(--sys-size-8);
+  padding-bottom: var(--sys-size-8);
   overflow: auto;
   scrollbar-width: thin;
 }
