--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -388,7 +388,7 @@ select.toolbar-item:focus-visible > * {
     box-shadow: inset 0 0 0 2px var(--sys-color-state-focus-ring);
   }
 
-  &:not(:has(devtools-button:hover)):hover {
+  &:not(:has(devtools-button:hover)):not(.disabled):hover {
     background-color: var(--sys-color-state-hover-on-subtle);
   }
 
