[GM3Restyling] Update Network throttling settings page
This CL introduces cards to the network throttling settings page.

Before: https://i.imgur.com/xsinva9.png
After: https://i.imgur.com/9mTc2Sc.png
Bug: 368238837
Change-Id: I74f855f2e42aa8b37529e755c08bd0ad77aa7776
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5993273
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -4,27 +4,12 @@
  * found in the LICENSE file.
  */
 
-:host {
-  overflow: hidden;
-}
-
-.header {
-  padding: 0 0 6px;
-  border-bottom: 1px solid var(--sys-color-divider);
-  font-size: 18px;
-  font-weight: normal;
-  flex: none;
-}
 
 .add-conditions-button {
-  flex: none;
-  margin: 10px 5px;
-  min-width: 140px;
-  align-self: flex-start;
+  border: none;
 }
 
 .conditions-list {
-  min-width: 640px;
   flex: auto;
 }
 
@@ -57,7 +42,7 @@
 .conditions-list-title {
   text-align: start;
   display: flex;
-  flex: auto;
+  flex-grow: 1;
   align-items: flex-start;
 }
 
