[GM3Restyling] Update Locations settings page
This CL updates the locations settings page to use cards.

Before: https://i.imgur.com/QLKX5dk.png
After: https://i.imgur.com/Zou744y.png
Bug: 368238837
Change-Id: I65050a9290e0fc0924e84396b6742a2b4712e237
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5993650
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/sensors/locationsSettingsTab.css
+++ b/front_end/panels/sensors/locationsSettingsTab.css
@@ -4,27 +4,12 @@
  * found in the LICENSE file.
  */
 
-:host {
-  overflow: hidden;
-}
-
-.header {
-  padding: 0 0 6px;
-  border-bottom: 1px solid var(--sys-color-divider);
-  font-size: 18px;
-  font-weight: normal;
-  flex: none;
-}
 
 .add-locations-button {
-  flex: none;
-  margin: 10px 5px;
-  min-width: 140px;
-  align-self: flex-start;
+  border: none;
 }
 
 .locations-list {
-  max-width: 600px;
   min-width: 340px;
   flex: auto;
 }
