[RPP Observations] Improve help links
- Reintroduce textual local/field help link but smaller
- Add (?) buttons for each metric only visible on hover
- Move the network cache tooltip to the checkbox and label

https://screenshot.googleplex.com/ALg4pwyLgCrss3s

Bug: 362252927
Change-Id: I5759c70dee25740d282323b9d1adfbcb1a6644e3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5983127
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -73,11 +73,6 @@
   margin-bottom: 10px;
 }
 
-.section-title-help {
-  height: var(--sys-typescale-headline4-line-height);
-  vertical-align: top;
-}
-
 .settings-card {
   border-radius: var(--sys-shape-corner-small);
   padding: 14px 16px 16px;
@@ -133,6 +128,10 @@
   border-radius: 2px;
   padding: 0 2px;
   min-width: 0;
+}
+
+.local-field-link {
+  margin-top: 8px;
 }
 
 .logs-section {
@@ -293,13 +292,6 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   margin-top: 8px;
 }
 
-.setting-hint {
-  margin-left: 6px;
-  vertical-align: bottom;
-  height: 18px;
-  width: 18px;
-}
-
 .environment-recs-title {
   margin-top: 12px;
   font-weight: var(--ref-typeface-weight-medium);
@@ -336,7 +328,7 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
 
 .phase-table {
   border-top: 1px solid var(--sys-color-divider);
-  padding: 7px 0;
+  padding: 7px 4px;
   margin-left: var(--phase-table-margin);
 }
 
