Duplicate settings screen css styles
Previously we relied on the settings screen styles in order to
style the settings pages outside of the settings panel. Remove
the cross-panel css dependency and duplicate the css settings.

Bug: 368238837
Change-Id: Ie06f08d68e93868fcb1b185ad80095750656ac5a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999250
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/sensors/locationsSettingsTab.css
+++ b/front_end/panels/sensors/locationsSettingsTab.css
@@ -70,3 +70,28 @@
 .locations-input-container {
   padding: 1px;
 }
+
+.settings-card-container-wrapper {
+  padding-top: var(--sys-size-8);
+  padding-bottom: var(--sys-size-8);
+  overflow: auto;
+  scrollbar-width: thin;
+}
+
+@media (max-width: 1000px) {
+  .settings-card-container-wrapper {
+    position: absolute;
+    top: var(--sys-size-8);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+  }
+}
+
+.settings-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--sys-size-9);
+}
