[lint] Fix Stylelint not running
Node syncSpawn can be promisified, and never runs the following
scripts, but it somehow closes the process afterwards.
Marking no presubmit as it fails on windows if you change lint rules

No-Presubmit: true
Bug: none
Change-Id: I08fdc3174fe542a5f824239b085d3433e5a24573
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999261
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Mathias Bynens <mathias@chromium.org>

--- a/front_end/models/persistence/editFileSystemView.css
+++ b/front_end/models/persistence/editFileSystemView.css
@@ -18,7 +18,8 @@
   }
 }
 
-.exclude-subfolders-text, .file-system-list-empty {
+.exclude-subfolders-text,
+.file-system-list-empty {
   padding: 0 var(--sys-size-6);
   height: var(--sys-size-13);
 }
