--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -28,7 +28,9 @@
   flex: 0 1 auto;
 }
 
-.enable-ignore-listing, .ignore-list-item, .general-exclusion-group {
+.enable-ignore-listing,
+.ignore-list-item,
+.general-exclusion-group {
   padding-left: var(--sys-size-4);
 }
 
