[ConsoleInsights] Add animation to streaming CI responses
This CL:
* Implements the streaming animation for the MarkdownView.
* Enables animation for the streaming in Console Insights.

Screencast: https://screencast.googleplex.com/cast/NTgyNzAzODg4MjU2MjA0OHxjZjE1MDNhMS02MQ

Bug: 375556018
Change-Id: Ibff1681df92c55ac4575c170c8fbf0ff455ef42f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5993652
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -8,6 +8,22 @@
   --code-background-color: var(--sys-color-surface4);
 }
 
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+.animating {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 0.3s steps(40, end);
+}
+
+.pending {
+  display: none !important; /* stylelint-disable-line declaration-no-important */
+}
+
+
 .message {
   line-height: 18px;
   font-size: 12px;
