[AI Assistance] History UX feedback
Fixes color of the text in the read-only section.
Changes the disclaimer when in read-only.
Changes the toolbar state to match UX.
Adds empty entry for History when not present.

Bug: 351752761
Change-Id: I97d11816421dd5785fdd6c600e76b4d0d2688576
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999714
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -74,6 +74,7 @@
   padding: var(--sys-size-5) 0;
   border-radius: var(--sys-shape-corner-medium-small);
   margin-bottom: var(--sys-size-5);
+  color: var(--sys-color-on-surface-subtle);
 }
 
 .chat-input-container {
