[GM3Restyling] Add icon to warnings in Experiments section
Drive-by: Remove accidentally added warning prefix.

Before: https://i.imgur.com/3aNWZux.png
After: https://i.imgur.com/X6CwB4u.png
Bug: 368238837
Change-Id: Ib85a4fcabe8415e4e452e4de78766f0a1f77574f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999481
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -146,6 +146,16 @@ devtools-button.link-icon {
   overflow: visible !important; /* stylelint-disable-line declaration-no-important */
 }
 
+.experiments-warning-subsection {
+  display: flex;
+  align-items: center;
+
+  > devtools-icon {
+    color: var(--sys-color-orange-bright);
+    margin-right: var(--sys-size-4);
+  }
+}
+
 @media (forced-colors: active) {
   .settings-window-title {
     color: canvastext;
